--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "My CV Project",
   "main": "index.js",
+  "engines": {
+    "node": "14.2"
+  },
   "scripts": {
     "start": "webpack serve --mode development --open --hot",
     "build": "webpack --mode production"
