--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "14.2"
   },
   "scripts": {
+    "heroku-prebuild": "npm install --dev",
     "start": "webpack serve --mode development --open --hot",
     "build": "webpack --mode production"
   },
