--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "heroku-prebuild": "npm install --dev",
     "devStart": "webpack serve --mode development --open --hot",
-    "start": "PORT=8080 node start ./src/index.js",
+    "start": "PORT=3000 node start ./src/index.js",
     "build": "webpack --mode production"
   },
   "author": "Tucker Barton",
@@ -18,6 +18,7 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.30.0"
