--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "buffer": "^6.0.3",
     "express": "^4.17.1",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "stream": "^0.0.2",
     "webpack": "^5.30.0"
   },
   "devDependencies": {
