--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@babel/preset-react": "^7.13.13",
     "buffer": "^6.0.3",
     "express": "^4.17.1",
+    "http-browserify": "^1.7.0",
+    "https-browserify": "^1.0.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
