--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "webpack": "^4.44.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
@@ -29,7 +30,6 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^5.2.0",
     "style-loader": "^2.0.0",
-    "webpack": "^4.44.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.1"
   }
