--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My website to introduce myself to potential employers and others interested in my work.",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild": "cd frontend && npm install && npm run build && cd backend && npm install",
+    "heroku-prebuild": "cd frontend && npm install && npm run build && cd ../backend && npm install",
     "devStart": "node backend/bin/www",
     "start": "cd backend && node ./bin/www"
   },
