--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta3",
+    "bootstrap-icons": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -30,13 +31,16 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "@popperjs/core": "^2.9.2",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
     "postcss-loader": "^4.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "svg-url-loader": "^7.1.1",
     "webpack-dev-server": "^3.11.1"
   }
 }
